# browser-deep-agent

./: .gitignore  README.md  bw.py  bw_playwright.py  chromium.txt  pyproject.toml
playwright/: package-lock.json  package.json
src/: agent.py
