[project]
name = "lc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.9.1",
    "bs4>=0.0.2",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=1.0.1",
    "mcp>=1.19.0",
    "playwright>=1.55.0",
    "psycopg>=3.2.11",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "selenium>=4.37.0",
]
